# ArcReel

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.en.md  README.md  README.vi.md  README.zh.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3c8b0ae43345_fix_truncated_datetime_values.py  b942e8c5d545_unify_timestamps_and_add_fk.py  c193c20914c9_add_language_to_users.py  c9b24204c0de_add_supported_durations_to_custom_.py  ecbb53758daa_add_api_keys_table.py
deploy/production/: MIGRATE-TO-POSTGRES.md
docs/: getting-started.md  jianying-export-guide.md  known-issues.md
docs/ark-docs/: 火山方舟费用参考.md
docs/google-genai-docs/: Google视频&图片生成费用参考.md
docs/plans/: 2026-02-06-assistant-sse-streaming-design.md  2026-02-06-frontend-refactor-plan.md  2026-02-10-assistant-question-wizard-impl.md  2026-02-10-landing-redesign-design.md  (+1 more)
frontend/: package-lock.json  package.json  pnpm-lock.yaml
lib/: cost_calculator.py  generation_queue.py  generation_queue_client.py  generation_worker.py  system_config.py
tests/: test_agent_session_store_unittest.py  test_assistant_service_stream_delta_unittest.py  test_assistant_streaming_unittest.py  test_config_resolver.py  test_cost_calculator.py  test_db_models.py  test_generate_video_skill.py  test_generation_queue_client_unittest.py  test_generation_queue_unittest.py  test_generation_tasks_service.py  test_generation_worker_module.py  test_openai_video_backend.py  test_system_config.py  test_system_config_router.py  test_tasks_sse_unittest.py  test_usage_tracker.py
webui/: app.html
(+183 files in other folders)
